add structure to website

--- a/index.html
+++ b/index.html
@@ -9,8 +9,18 @@
 
     <link rel="stylesheet" href="assets/css/style.css">
     
-    <title>Songwriter Camp</title>
+    <title>dEEGE Discography</title>
 </head>
 <body>
+    <header>Header Content</header>
+    <section>
+        About dEEGE
+    </section>
+    <section>
+        Overview / Biography / Discography
+    </section>
+    <footer>
+        Links & Contact
+    </footer>
 </body>
 </html>
