add basic header structure

--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
     <title>dEEGE Discography</title>
 </head>
 <body>
-    <header>Header Content</header>
+    <header>
+        <a href="index.html">
+            <h1>TuneLog</h1>
+        </a>
+    </header>
     <section>
         About dEEGE
     </section>
