--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <a href="index.html">
-            <h1>TuneLog</h1>
+            <h1 id="logo">Tune<span style="color:#2B78E4">Log</span></h1>
         </a>
     </header>
     <section>
