add style to header

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <title>dEEGE Discography</title>
 </head>
 <body>
-    <header>
-        <a href="index.html">
+    <header class="page-header">
+            <a href="index.html">
             <h1 id="logo">Tune<span style="color:#2B78E4">Log</span></h1>
-        </a>
+            </a>
     </header>
     <section>
         About dEEGE
