--- a/index.html
+++ b/index.html
@@ -14,11 +14,15 @@
 <body>
     <header class="page-header">
             <a href="index.html">
-            <h1 id="logo">Tune<span style="color:#2B78E4">Log</span></h1>
+            <h1 id="logo" class="text-uppercase">Tune<span style="color:#2B78E4">Log</span></h1>
             </a>
     </header>
     <section>
-        About dEEGE
+        <div>
+            <img src="assets/images/dg.png" alt="Avatar of dEEGE">
+            <p>Discography</p>
+            <h2>dEEGE</h2>
+        </div>
     </section>
     <section>
         Overview / Biography / Discography
