add style to basic content in about deege section

--- a/index.html
+++ b/index.html
@@ -17,9 +17,12 @@
             <h1 id="logo" class="text-uppercase">Tune<span style="color:#2B78E4">Log</span></h1>
             </a>
     </header>
-    <section>
-        <div>
+    <section id="about-deege">
+        <div id="avatar" class="about-box">
             <img src="assets/images/dg.png" alt="Avatar of dEEGE">
+        </div>
+        
+        <div id="text-box" class="about-box">
             <p>Discography</p>
             <h2>dEEGE</h2>
         </div>
