--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <title>dEEGE Discography</title>
 </head>
 <body>
-    <header class="page-header">
+    <header id="page-header">
             <a href="index.html">
             <h1 id="logo" class="text-uppercase">Tune<span style="color:#2B78E4">Log</span></h1>
             </a>
     </header>
     <section id="about-deege">
-        <div id="avatar" class="about-box">
+        <div id="avatar"class="about-box">
             <img src="assets/images/dg.png" alt="Avatar of dEEGE">
         </div>
         
