fix code for div containing image

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </a>
     </header>
     <section id="about-deege">
-        <div id="avatar"class="about-box">
+        <div class="about-box float-left margin-left">
             <img src="assets/images/dg.png" alt="Avatar of dEEGE">
         </div>
         
