--- a/index.html
+++ b/index.html
@@ -14,17 +14,44 @@
 <body>
     <header id="page-header">
             <a href="index.html">
-            <h1 id="logo" class="text-uppercase">Tune<span style="color:#2B78E4">Log</span></h1>
+            <h1 id="logo" class="text-uppercase">Tune<span style="color:#2b78e4">Log</span></h1>
             </a>
     </header>
     <section id="about-deege">
-        <div class="about-box float-left margin-left">
-            <img src="assets/images/dg.png" alt="Avatar of dEEGE">
-        </div>
-        
-        <div id="text-box" class="about-box">
-            <p>Discography</p>
-            <h2>dEEGE</h2>
+        <div class="row">
+            <div class="float-left margin-left column">
+                <img src="assets/images/dg.png" alt="Avatar of dEEGE">
+            </div>
+            <div class="float-right margin-right column">
+                <p>Discography</p>
+                <h2>dEEGE</h2>
+                <table id="quick-info">
+                    <tr>
+                        <th colspan="2" class="strong">dEEGE - Artist Details</th>
+                    </tr>
+                    <hr>
+                    <tr>
+                        <td class="strong">Active</td>
+                        <td>2019-</td>
+                    </tr>
+                    <tr>
+                        <td class="strong">Born</td>
+                        <td>November 29, 2000 in <a href="#">Karlskoga, Sweden</a></td>
+                    </tr>
+                    <tr>
+                        <td class="strong">Genre</td>
+                        <td>Hip-hop</td>
+                    </tr>
+                    <tr>
+                        <td class="strong">Styles</td>
+                        <td>Alternative Hip-hop<br>Boombap<br>Melodic Rap</td>
+                    </tr>
+                    <tr>
+                        <td class="strong">Also Known As</td>
+                        <td>Johannes Weidensjö<br>dEEGE<br>dEEGE 2time</td>
+                    </tr>
+                </table>
+            </div>
         </div>
     </section>
     <section>
