add more styling to header and about deege section

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
     </section>
     <section>
-        Overview / Biography / Discography
+        Overview / Discography
     </section>
     <footer>
         Links & Contact
