add responsiveness to section about deege

--- a/index-tab-b.html
+++ b/index-tab-b.html
@@ -18,11 +18,11 @@
             </a>
     </header>
     <section id="about-deege">
-        <div class="row">
-            <div class="float-left margin-left column">
+        <div class="container">
+            <div class="">
                 <img src="assets/images/dg.png" alt="Avatar of dEEGE">
             </div>
-            <div class="float-right margin-right column">
+            <div class="">
                 <p>Discography</p>
                 <h2>dEEGE</h2>
                 <table id="quick-info">
