--- a/index.html
+++ b/index.html
@@ -17,55 +17,57 @@
             <h1 id="logo" class="text-uppercase">Tune<span style="color:#2b78e4">Log</span></h1>
             </a>
     </header>
-    <section id="about-deege">
-        <div class="row">
-            <div class="float-left margin-left column">
-                <img src="assets/images/dg.png" alt="Avatar of dEEGE">
+    <main>
+        <section id="about-deege">
+            <div class="container">
+                <div class="image">
+                    <img src="assets/images/dg.png" alt="Avatar of dEEGE">
+                </div>
+                <div class="">
+                    <p>Discography</p>
+                    <h2>dEEGE</h2>
+                    <table id="quick-info">
+                        <tr>
+                            <th colspan="2" class="strong">dEEGE - Artist Details</th>
+                        </tr>
+                        <hr>
+                        <tr>
+                            <td class="strong">Active</td>
+                            <td>2019-</td>
+                        </tr>
+                        <tr>
+                            <td class="strong">Born</td>
+                            <td>November 29, 2000 in <a href="#">Karlskoga, Sweden</a></td>
+                        </tr>
+                        <tr>
+                            <td class="strong">Genre</td>
+                            <td>Hip-hop</td>
+                        </tr>
+                        <tr>
+                            <td class="strong">Styles</td>
+                            <td>Alternative Hip-hop<br>Boombap<br>Melodic Rap</td>
+                        </tr>
+                        <tr>
+                            <td class="strong">Also Known As</td>
+                            <td>Johannes Weidensjö<br>dEEGE<br>dEEGE 2time</td>
+                        </tr>
+                    </table>
+                </div>
             </div>
-            <div class="float-right margin-right column">
-                <p>Discography</p>
-                <h2>dEEGE</h2>
-                <table id="quick-info">
-                    <tr>
-                        <th colspan="2" class="strong">dEEGE - Artist Details</th>
-                    </tr>
-                    <hr>
-                    <tr>
-                        <td class="strong">Active</td>
-                        <td>2019-</td>
-                    </tr>
-                    <tr>
-                        <td class="strong">Born</td>
-                        <td>November 29, 2000 in <a href="#">Karlskoga, Sweden</a></td>
-                    </tr>
-                    <tr>
-                        <td class="strong">Genre</td>
-                        <td>Hip-hop</td>
-                    </tr>
-                    <tr>
-                        <td class="strong">Styles</td>
-                        <td>Alternative Hip-hop<br>Boombap<br>Melodic Rap</td>
-                    </tr>
-                    <tr>
-                        <td class="strong">Also Known As</td>
-                        <td>Johannes Weidensjö<br>dEEGE<br>dEEGE 2time</td>
-                    </tr>
-                </table>
-            </div>
-        </div>
-    </section>
-    <section>
-        <nav id ="artist-menu">
-            <ul>
-                <li>
-                    <a href="index.html">Overview</a>
-                </li>
-                <li>
-                    <a href="index-tab-b.html">Discography</a>
-                </li>
-            </ul>
-        </nav>
-    </section>
+        </section>
+        <section>
+            <nav id ="artist-menu">
+                <ul>
+                    <li>
+                        <a href="index.html">Overview</a>
+                    </li>
+                    <li>
+                        <a href="index-tab-b.html">Discography</a>
+                    </li>
+                </ul>
+            </nav>
+        </section>
+    </main>
     <footer>
         Links & Contact
     </footer>
