--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     <main>
         <section id="about-deege">
             <div class="container">
-                <div class="image">
+                <div>
                     <img src="assets/images/dg.png" alt="Avatar of dEEGE">
                 </div>
-                <div class="">
+                <div>
                     <p>Discography</p>
                     <h2>dEEGE</h2>
                     <table id="quick-info">
@@ -56,16 +56,17 @@
             </div>
         </section>
         <section>
-            <nav id ="artist-menu">
-                <ul>
-                    <li>
-                        <a href="index.html">Overview</a>
-                    </li>
-                    <li>
-                        <a href="index-tab-b.html">Discography</a>
-                    </li>
-                </ul>
-            </nav>
+            <div class="container2">
+                <div>
+                    <h2>Albums & Singles</h2>
+                </div>
+                <div>
+                    <a href="https://open.spotify.com/"><img src="assets/images/pink-yaeger.webp" alt="Pink Yaeger album by Theophilius and dEEGE"></a>
+                    <a href="https://open.spotify.com/"><img src="assets/images/gone.webp" alt="Gone single by Theophilius and dEEGE"></a>
+                    <a href="https://open.spotify.com/"><img src="assets/images/rose-petals.webp" alt="Rose Petals single på Theophilius and dEEGE"></a>
+                    <a href="https://open.spotify.com/"><img src="assets/images/oceane.webp" alt="Océane single by Theophilius and dEEGE"></a>
+                </div>
+            </div>
         </section>
     </main>
     <footer>
