add style to overview images and title

--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
         </section>
         <section>
             <div class="container2">
-                <div>
-                    <h2>Albums & Singles</h2>
+                <div class="card">
+                    <h1>Albums & Singles</h1>
                 </div>
-                <div>
+                <div class="card">
                     <a href="https://open.spotify.com/"><img src="assets/images/pink-yaeger.webp" alt="Pink Yaeger album by Theophilius and dEEGE"></a>
-                    <a href="https://open.spotify.com/"><img src="assets/images/gone.webp" alt="Gone single by Theophilius and dEEGE"></a>
+                    <a href="https://open.spotify.com/"><img src="assets/images/in-the-hills.webp" alt="In The Hills single by Theophilius and dEEGE"></a>
                     <a href="https://open.spotify.com/"><img src="assets/images/rose-petals.webp" alt="Rose Petals single på Theophilius and dEEGE"></a>
                     <a href="https://open.spotify.com/"><img src="assets/images/oceane.webp" alt="Océane single by Theophilius and dEEGE"></a>
                 </div>
