--- a/index.html
+++ b/index.html
@@ -20,38 +20,40 @@
     <main>
         <section id="about-deege">
             <div class="container">
-                <div>
+                <div class="transparent-bg-black">
+                    <div>
                     <img src="assets/images/dg.png" alt="Avatar of dEEGE">
                 </div>
-                <div>
-                    <p>Discography</p>
-                    <h2>dEEGE</h2>
-                    <table id="quick-info">
-                        <tr>
-                            <th colspan="2" class="strong">dEEGE - Artist Details</th>
-                        </tr>
-                        <hr>
-                        <tr>
-                            <td class="strong">Active</td>
-                            <td>2019-</td>
-                        </tr>
-                        <tr>
-                            <td class="strong">Born</td>
-                            <td>November 29, 2000 in <a href="#">Karlskoga, Sweden</a></td>
-                        </tr>
-                        <tr>
-                            <td class="strong">Genre</td>
-                            <td>Hip-hop</td>
-                        </tr>
-                        <tr>
-                            <td class="strong">Styles</td>
-                            <td>Alternative Hip-hop<br>Boombap<br>Melodic Rap</td>
-                        </tr>
-                        <tr>
-                            <td class="strong">Also Known As</td>
-                            <td>Johannes Weidensjö<br>dEEGE<br>dEEGE 2time</td>
-                        </tr>
-                    </table>
+                    <div>
+                        <p>Discography</p>
+                        <h2>dEEGE</h2>
+                        <table id="quick-info">
+                            <tr>
+                                <th colspan="2" class="strong">dEEGE - Artist Details</th>
+                            </tr>
+                            <hr>
+                            <tr>
+                                <td class="strong">Active</td>
+                                <td>2019-</td>
+                            </tr>
+                            <tr>
+                                <td class="strong">Born</td>
+                                <td>November 29, 2000 in <a href="#">Karlskoga, Sweden</a></td>
+                            </tr>
+                            <tr>
+                                <td class="strong">Genre</td>
+                                <td>Hip-hop</td>
+                            </tr>
+                            <tr>
+                                <td class="strong">Styles</td>
+                                <td>Alternative Hip-hop<br>Boombap<br>Melodic Rap</td>
+                            </tr>
+                            <tr>
+                                <td class="strong">Also Known As</td>
+                                <td>Johannes Weidensjö<br>dEEGE<br>dEEGE 2time</td>
+                            </tr>
+                        </table>
+                    </div>
                 </div>
             </div>
         </section>
