--- a/index.html
+++ b/index.html
@@ -59,15 +59,18 @@
         </section>
         <section>
             <div class="container2">
-                <div class="card">
-                    <h1>Albums & Singles</h1>
+                <div class="bg-white">
+                    <div class="card">
+                        <h1>Albums & Singles</h1>
+                    </div>
+                    <div class="card">
+                        <a href="https://open.spotify.com/"><img src="assets/images/pink-yaeger.webp" alt="Pink Yaeger album by Theophilius and dEEGE"></a>
+                        <a href="https://open.spotify.com/"><img src="assets/images/in-the-hills.webp" alt="In The Hills single by Theophilius and dEEGE"></a>
+                        <a href="https://open.spotify.com/"><img src="assets/images/rose-petals.webp" alt="Rose Petals single på Theophilius and dEEGE"></a>
+                        <a href="https://open.spotify.com/"><img src="assets/images/oceane.webp" alt="Océane single by Theophilius and dEEGE"></a>
+                    </div>
                 </div>
-                <div class="card">
-                    <a href="https://open.spotify.com/"><img src="assets/images/pink-yaeger.webp" alt="Pink Yaeger album by Theophilius and dEEGE"></a>
-                    <a href="https://open.spotify.com/"><img src="assets/images/in-the-hills.webp" alt="In The Hills single by Theophilius and dEEGE"></a>
-                    <a href="https://open.spotify.com/"><img src="assets/images/rose-petals.webp" alt="Rose Petals single på Theophilius and dEEGE"></a>
-                    <a href="https://open.spotify.com/"><img src="assets/images/oceane.webp" alt="Océane single by Theophilius and dEEGE"></a>
-                </div>
+                
             </div>
         </section>
     </main>
