add content and style to footer

--- a/index.html
+++ b/index.html
@@ -64,18 +64,31 @@
                         <h1>Albums & Singles</h1>
                     </div>
                     <div class="card">
-                        <a href="https://open.spotify.com/"><img src="assets/images/pink-yaeger.webp" alt="Pink Yaeger album by Theophilius and dEEGE"></a>
-                        <a href="https://open.spotify.com/"><img src="assets/images/in-the-hills.webp" alt="In The Hills single by Theophilius and dEEGE"></a>
-                        <a href="https://open.spotify.com/"><img src="assets/images/rose-petals.webp" alt="Rose Petals single på Theophilius and dEEGE"></a>
-                        <a href="https://open.spotify.com/"><img src="assets/images/oceane.webp" alt="Océane single by Theophilius and dEEGE"></a>
+                        <a href="https://open.spotify.com/" target="_blank"><img src="assets/images/pink-yaeger.webp" alt="Pink Yaeger album by Theophilius and dEEGE"></a>
+                        <a href="https://open.spotify.com/" target="_blank"><img src="assets/images/in-the-hills.webp" alt="In The Hills single by Theophilius and dEEGE"></a>
+                        <a href="https://open.spotify.com/" target="_blank"><img src="assets/images/rose-petals.webp" alt="Rose Petals single på Theophilius and dEEGE"></a>
+                        <a href="https://open.spotify.com/" target="_blank"><img src="assets/images/oceane.webp" alt="Océane single by Theophilius and dEEGE"></a>
                     </div>
                 </div>
-                
             </div>
         </section>
     </main>
     <footer>
-        Links & Contact
+        <div class="container3">
+            <div id="footer-bar">
+                <div class="footer-card">
+                    <h3>Socials</h3>
+                </div>
+                <div class="footer-card">
+                    <ul>
+                        <li><a href="https://instagram.com/" target="_blank">Instagram</a></li>
+                        <li><a href="https://soundcloud.com/" target="_blank">Soundcloud</a></li>
+                        <li><a href="https://beatstars.com/" target="_blank">BeatStars</a></li>
+                        <li><a href="https://splice.com/" target="_blank">Splice</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
