add navigation to header

--- a/index.html
+++ b/index.html
@@ -6,19 +6,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Songwriter camp for musicians in Örebro">
     <meta name="keywords" content="producer, producing, songwriting, songwriter, örebro, sweden">
+    <!-- add meta data for description, keywords -->
+    <link rel="stylesheet" href="assets/css/style.css"> <!-- link css with correct filepath -->
 
-    <link rel="stylesheet" href="assets/css/style.css">
-    
     <title>dEEGE Discography</title>
 </head>
 <body>
-    <header id="page-header">
-            <a href="index.html">
-            <h1 id="logo" class="text-uppercase">Tune<span style="color:#2b78e4">Log</span></h1>
-            </a>
+    <header id="page-header"> <!-- header logo and navigation -->
+        <div class="container-header">
+            <div>
+                <a href="index.html">
+                <h1 id="logo" class="text-uppercase">Tune<span style="color:#2b78e4">Log</span></h1>
+                </a>
+            </div>
+            <div>
+                <nav id="menu">
+                    <ul>
+                        <li><a href="index.html">Overview</a>
+                        </li>
+                        <li><a href="#">Discography</a>
+                        </li>
+                        <li><a href="#">Biography</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
     </header>
-    <main>
-        <section id="about-deege">
+    <main> <!-- main page, content about deege, and overview-->
+        <section id="about-deege"> <!-- about deege with image and table -->
             <div class="container">
                 <div class="transparent-bg-black">
                     <div>
@@ -57,7 +73,7 @@
                 </div>
             </div>
         </section>
-        <section>
+        <section> <!-- overview section with clickable images in flex display -->
             <div class="container2">
                 <div class="bg-white">
                     <div class="card">
@@ -73,7 +89,7 @@
             </div>
         </section>
     </main>
-    <footer>
+    <footer> <!-- footer with social media links -->
         <div class="container3">
             <div id="footer-bar">
                 <div class="footer-card">
