add first beat with controls to discography

--- a/discography.html
+++ b/discography.html
@@ -22,9 +22,9 @@
             <div>
                 <nav id="menu">
                     <ul>
-                        <li><a href="index.html" class="active">Overview</a>
+                        <li><a href="index.html">Overview</a>
                         </li>
-                        <li><a href="discography.html">Discography</a>
+                        <li><a href="discography.html" class="active">Discography</a>
                         </li>
                         <li><a href="#">Biography</a>
                         </li>
@@ -77,13 +77,16 @@
             <div class="container2">
                 <div class="bg-white">
                     <div class="card">
-                        <h1>Albums & Singles</h1>
+                        <h1>Discography</h1>
                     </div>
                     <div class="card">
-                        <a href="https://open.spotify.com/" target="_blank"><img src="assets/images/pink-yaeger.webp" alt="Pink Yaeger album by Theophilius and dEEGE"></a>
-                        <a href="https://open.spotify.com/" target="_blank"><img src="assets/images/in-the-hills.webp" alt="In The Hills single by Theophilius and dEEGE"></a>
-                        <a href="https://open.spotify.com/" target="_blank"><img src="assets/images/rose-petals.webp" alt="Rose Petals single på Theophilius and dEEGE"></a>
-                        <a href="https://open.spotify.com/" target="_blank"><img src="assets/images/oceane.webp" alt="Océane single by Theophilius and dEEGE"></a>
+                        <div class="beat">
+                            <p>Beat 1:</p>
+                            <audio controls>
+                            <source src="assets/audio/beat-cinematic.mp3">
+                            </audio>
+                        </div>
+                        
                     </div>
                 </div>
             </div>
