fix responsiveness for header and style first beat

--- a/index.html
+++ b/index.html
@@ -44,10 +44,9 @@
                         <p>Discography</p>
                         <h2>dEEGE</h2>
                         <table id="quick-info">
-                            <tr>
+                            <tr class="border-bottom"> <!-- add border bottom here dEEGE!-->
                                 <th colspan="2" class="strong">dEEGE - Artist Details</th>
                             </tr>
-                            <hr>
                             <tr>
                                 <td class="strong">Active</td>
                                 <td>2019-</td>
@@ -80,10 +79,10 @@
                         <h1>Albums & Singles</h1>
                     </div>
                     <div class="card">
-                        <a href="https://open.spotify.com/" target="_blank"><img src="assets/images/pink-yaeger.webp" alt="Pink Yaeger album by Theophilius and dEEGE"></a>
-                        <a href="https://open.spotify.com/" target="_blank"><img src="assets/images/in-the-hills.webp" alt="In The Hills single by Theophilius and dEEGE"></a>
-                        <a href="https://open.spotify.com/" target="_blank"><img src="assets/images/rose-petals.webp" alt="Rose Petals single på Theophilius and dEEGE"></a>
-                        <a href="https://open.spotify.com/" target="_blank"><img src="assets/images/oceane.webp" alt="Océane single by Theophilius and dEEGE"></a>
+                        <a href="https://open.spotify.com/" target="_blank" rel="noopener"><img src="assets/images/pink-yaeger.webp" alt="Pink Yaeger album by Theophilius and dEEGE"></a>
+                        <a href="https://open.spotify.com/" target="_blank" rel="noopener"><img src="assets/images/in-the-hills.webp" alt="In The Hills single by Theophilius and dEEGE"></a>
+                        <a href="https://open.spotify.com/" target="_blank" rel="noopener"><img src="assets/images/rose-petals.webp" alt="Rose Petals single på Theophilius and dEEGE"></a>
+                        <a href="https://open.spotify.com/" target="_blank" rel="noopener"><img src="assets/images/oceane.webp" alt="Océane single by Theophilius and dEEGE"></a>
                     </div>
                 </div>
             </div>
