--- a/discography.html
+++ b/discography.html
@@ -79,14 +79,15 @@
                     <div class="card">
                         <h1>Discography</h1>
                     </div>
-                    <div class="card">
-                        <div class="beat">
+                    <div class="beats">
+                        <div>
                             <p>Beat 1:</p>
+                        </div>
+                        <div>
                             <audio controls>
                             <source src="assets/audio/beat-cinematic.mp3">
                             </audio>
                         </div>
-                        
                     </div>
                 </div>
             </div>
@@ -100,10 +101,10 @@
                 </div>
                 <div class="footer-card">
                     <ul>
-                        <li><a href="https://instagram.com/" target="_blank">Instagram</a></li>
-                        <li><a href="https://soundcloud.com/" target="_blank">Soundcloud</a></li>
-                        <li><a href="https://beatstars.com/" target="_blank">BeatStars</a></li>
-                        <li><a href="https://splice.com/" target="_blank">Splice</a></li>
+                        <li><a href="https://instagram.com/" target="_blank" rel="noopener">Instagram</a></li>
+                        <li><a href="https://soundcloud.com/" target="_blank" rel="noopener">Soundcloud</a></li>
+                        <li><a href="https://beatstars.com/" target="_blank" rel="noopener">BeatStars</a></li>
+                        <li><a href="https://splice.com/" target="_blank" rel="noopener">Splice</a></li>
                     </ul>
                 </div>
             </div>
