update meta data and rename index.html to overview.html and fix anchors

--- a/discography.html
+++ b/discography.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Songwriter camp for musicians in Örebro">
-    <meta name="keywords" content="producer, producing, songwriting, songwriter, örebro, sweden">
+    <meta name="description" content="General information, discography and biography of producer/artist dEEGE from Örebro, Sweden">
+    <meta name="keywords" content="producer, producing, beats, artist, örebro, sweden">
     <!-- add meta data for description, keywords -->
     <link rel="stylesheet" href="assets/css/style.css"> <!-- link css with correct filepath -->
 
@@ -15,14 +15,14 @@
     <header id="page-header"> <!-- header logo and navigation -->
         <div class="container-header">
             <div>
-                <a href="index.html">
+                <a href="overview.html">
                 <h1 id="logo" class="text-uppercase">Tune<span style="color:#2b78e4">Log</span></h1>
                 </a>
             </div>
             <div>
                 <nav id="menu">
                     <ul>
-                        <li><a href="index.html">Overview</a>
+                        <li><a href="overview.html">Overview</a>
                         </li>
                         <li><a href="discography.html" class="active">Discography</a>
                         </li>
