add all beats to discography and paragraph for names, fixed responsiveness

--- a/discography.html
+++ b/discography.html
@@ -38,7 +38,7 @@
             <div class="container">
                 <div class="transparent-bg-black">
                     <div>
-                    <img src="assets/images/dg.png" alt="Avatar of dEEGE">
+                    <img src="assets/images/dg.webp" alt="Avatar of dEEGE">
                 </div>
                     <div>
                         <p>Discography</p>
@@ -73,7 +73,7 @@
                 </div>
             </div>
         </section>
-        <section> <!-- overview section with clickable images in flex display -->
+        <section> <!-- beats section with controls -->
             <div class="container2">
                 <div class="bg-white">
                     <div class="card">
@@ -84,8 +84,70 @@
                             <p>Beat 1:</p>
                         </div>
                         <div>
+                            <br>
+                            <p>chasingcream.mp3</p>
+                            <audio controls>
+                            <source src="assets/audio/beat-chasingcream.mp3">
+                            </audio>
+                        </div>
+                    </div>
+                    <div class="beats">
+                        <div>
+                            <p>Beat 2:</p>
+                        </div>
+                        <div>
+                            <br>
+                            <p>cinematic.mp3</p>
                             <audio controls>
                             <source src="assets/audio/beat-cinematic.mp3">
+                            </audio>
+                        </div>
+                    </div>
+                    <div class="beats">
+                        <div>
+                            <p>Beat 3:</p>
+                        </div>
+                        <div>
+                            <br>
+                            <p>kick.mp3</p>
+                            <audio controls>
+                            <source src="assets/audio/beat-kick.mp3">
+                            </audio>
+                        </div>
+                    </div>
+                    <div class="beats">
+                        <div>
+                            <p>Beat 4:</p>
+                        </div>
+                        <div>
+                            <br>
+                            <p>rocks.mp3</p>
+                            <audio controls>
+                            <source src="assets/audio/beat-rocks.mp3">
+                            </audio>
+                        </div>
+                    </div>
+                    <div class="beats">
+                        <div>
+                            <p>Beat 5:</p>
+                        </div>
+                        <div>
+                            <br>
+                            <p>travelin.mp3</p>
+                            <audio controls>
+                            <source src="assets/audio/beat-travelin.mp3">
+                            </audio>
+                        </div>
+                    </div>
+                    <div class="beats">
+                        <div>
+                            <p>Beat 6:</p>
+                        </div>
+                        <div>
+                            <br>
+                            <p>wahwa.mp3</p>
+                            <audio controls>
+                            <source src="assets/audio/beat-wahwa.mp3">
                             </audio>
                         </div>
                     </div>
