--- a/overview.html
+++ b/overview.html
@@ -38,7 +38,7 @@
             <div class="container">
                 <div class="transparent-bg-black">
                     <div>
-                    <img src="assets/images/dg.png" alt="Avatar of dEEGE">
+                    <img src="assets/images/dg.webp" alt="Avatar of dEEGE">
                 </div>
                     <div>
                         <p>Discography</p>
