--- a/discography.html
+++ b/discography.html
@@ -26,7 +26,7 @@
                         </li>
                         <li><a href="discography.html" class="active">Discography</a>
                         </li>
-                        <li><a href="#">Biography</a>
+                        <li><a href="biography.html">Biography</a>
                         </li>
                     </ul>
                 </nav>
