add style to biography

--- a/overview.html
+++ b/overview.html
@@ -96,10 +96,10 @@
                 </div>
                 <div class="footer-card">
                     <ul>
-                        <li><a href="https://instagram.com/" target="_blank">Instagram</a></li>
-                        <li><a href="https://soundcloud.com/" target="_blank">Soundcloud</a></li>
-                        <li><a href="https://beatstars.com/" target="_blank">BeatStars</a></li>
-                        <li><a href="https://splice.com/" target="_blank">Splice</a></li>
+                        <li><a href="https://instagram.com/" target="_blank" rel="noopener">Instagram</a></li>
+                        <li><a href="https://soundcloud.com/" target="_blank" rel="noopener">Soundcloud</a></li>
+                        <li><a href="https://beatstars.com/" target="_blank" rel="noopener">BeatStars</a></li>
+                        <li><a href="https://splice.com/" target="_blank" rel="noopener">Splice</a></li>
                     </ul>
                 </div>
             </div>
