--- a/biography.html
+++ b/biography.html
@@ -34,20 +34,22 @@
         </div>
     </header>
     <main> <!-- main page, content about deege, and overview-->
-        <section id="biography">
-            <div>
-                <h2>Discography</h2>
+        <section>
+            <div id="biography">
+                <div>
+                    <h2>Biography</h2>
+                </div>
+                <div class="half">
+                    <div>
+                        <img src="assets/images/me.webp" alt="Picture of Johannes">
+                        <p>dEEGE begun his producer career at 2019. He decided to collaborate with his friend as both were just starting out. </p>
+                    </div>
+                    <div>
+                        <p>text goes here</p>
+                        <img src="assets/images/picturedg.webp" alt="Picture of dEEGE">
+                    </div>
+                </div>
             </div>
-            <div>
-                <img src="assets/images/me.webp" alt="Picture of Johannes">
-                <p>text goes here</p>
-            </div>
-            <div>
-                <p>text goes here</p>
-                <img src="#" alt="Picture of dEEGE">
-            </div>    
-            
-            
         </section>
     </main>
     <footer> <!-- footer with social media links -->
@@ -58,10 +60,10 @@
                 </div>
                 <div class="footer-card">
                     <ul>
-                        <li><a href="https://instagram.com/" target="_blank">Instagram</a></li>
-                        <li><a href="https://soundcloud.com/" target="_blank">Soundcloud</a></li>
-                        <li><a href="https://beatstars.com/" target="_blank">BeatStars</a></li>
-                        <li><a href="https://splice.com/" target="_blank">Splice</a></li>
+                        <li><a href="https://instagram.com/" target="_blank" rel="noopener">Instagram</a></li>
+                        <li><a href="https://soundcloud.com/" target="_blank" rel="noopener">Soundcloud</a></li>
+                        <li><a href="https://beatstars.com/" target="_blank" rel="noopener">BeatStars</a></li>
+                        <li><a href="https://splice.com/" target="_blank" rel="noopener">Splice</a></li>
                     </ul>
                 </div>
             </div>
