--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
     <header id="page-header"> <!-- header logo and navigation -->
         <div class="container-header">
             <div>
-                <a href="overview.html">
+                <a href="index.html">
                 <h1 id="logo" class="text-uppercase">Tune<span style="color:#2b78e4">Log</span></h1>
                 </a>
             </div>
             <div>
                 <nav id="menu">
                     <ul>
-                        <li><a href="overview.html" class="active">Overview</a>
+                        <li><a href="index.html" class="active">Overview</a>
                         </li>
                         <li><a href="discography.html">Discography</a>
                         </li>
